--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Página do Pokémon Squirtle</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -25,16 +24,17 @@
     <main>
       <section id="info-squirtle" aria-labelledby="info-squirtle-label">
         <h2 id="info-squirtle-label">Informações sobre Squirtle</h2>
-        <div>
-          <img 
-          class="hover-img"
+        <div id="squirtle-img">
+          <img
+            class="hover-img"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
-            alt="Squirtle 1"
+            alt="Squirtle - Pokémon do tipo Água"
           />
           <img
-          class="hover-img"
+            class="hover-img"
+            id="squirtle-img-2"
             src="https://archives.bulbagarden.net/media/upload/thumb/7/79/Squirtle_SSBU.png/200px-Squirtle_SSBU.png"
-            alt="Squirtle 2"
+            alt="Squirtle - Pokemon do tipo água 2"
           />
         </div>
         <p>
@@ -117,7 +117,7 @@
           <li>
             <figure>
               <img
-              class="hover-img"
+                class="hover-img"
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
                 alt="Squirtle"
               />
@@ -128,7 +128,7 @@
           <li>
             <figure>
               <img
-              class="hover-img"
+                class="hover-img"
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
                 alt="Wartortle"
               />
@@ -139,7 +139,7 @@
           <li>
             <figure>
               <img
-              class="hover-img"
+                class="hover-img"
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
                 alt="Blastoise"
               />
