pagina extra p pokemon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Página do Pokémon Squirtle</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header id="header">
@@ -116,33 +116,39 @@
         <ul>
           <li>
             <figure>
-              <img
-                class="hover-img"
-                src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
-                alt="Squirtle"
-              />
+              <a href="./pokemon/pokemon.html?evolution=squirtle">
+                <img
+                  src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
+                  alt="Squirtle"
+                  class="hover-img"
+                />
+              </a>
               <figcaption>1. Squirtle</figcaption>
             </figure>
           </li>
 
           <li>
             <figure>
-              <img
-                class="hover-img"
-                src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
-                alt="Wartortle"
-              />
+              <a href="./pokemon/pokemon.html?evolution=wartortle">
+                <img
+                  src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
+                  alt="Wartortle"
+                  class="hover-img"
+                />
+              </a>
               <figcaption>2. Wartortle</figcaption>
             </figure>
           </li>
 
           <li>
             <figure>
-              <img
-                class="hover-img"
-                src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
-                alt="Blastoise"
-              />
+              <a href="./pokemon/pokemon.html?evolution=blastoise">
+                <img
+                  src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
+                  alt="Blastoise"
+                  class="hover-img"
+                />
+              </a>
               <figcaption>3. Blastoise</figcaption>
             </figure>
           </li>
