--- a/pokemon/pokemon.html
+++ b/pokemon/pokemon.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página do Pokémon </title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<script src="script.js"></script>
-<body>
-    
+  <head>
+    <meta charset="UTF-8" />
+    <title>Página do Pokémon</title>
+    <link rel="stylesheet" href="../style.css" />
+  </head>
+  <body>
     <header id="header">
-        <h1 aria-label="Titulo da Página: Wartortle">Wartortle</h1>
-      </header>
+      <a href="../index.html"><h1>Squirtle</h1></a>
+    </header>
 
     <main>
-        <img src="" aria-label="Imagem do Wartortle">
+      <section>
+        <h1 id="informacoes"></h1>
+        <img id="pokemon-img"></div>
+      </section>
     </main>
 
     <footer aria-label="Rodapé">
@@ -24,6 +24,10 @@
       <p><a href="#header">Voltar para o topo</a></p>
       <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
       <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
+      <p id="times-visited"></p>
     </footer>
-</body>
+    <script src="../script.js"></script>
+  </body>
+
+  <script src="./script.js"></script>
 </html>
