--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Página do Pokémon Squirtle</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="header">
@@ -18,6 +18,7 @@
         <li><a href="#artigo-squirtle">Artigo sobre Squirtle</a></li>
         <li><a href="#recursos">Recursos Adicionais</a></li>
         <li><a href="#evolucao">Evolução</a></li>
+        <li><a href="./todo-list/index.html">Todo List</a></li>
       </ul>
     </nav>
 
@@ -163,7 +164,8 @@
       <p><a href="#header">Voltar para o topo</a></p>
       <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
       <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
+      <p id="times-visited"></p>
     </footer>
+    <script src="script.js"></script>
   </body>
-  
 </html>
