--- a/pokemon/pokemon.html
+++ b/pokemon/pokemon.html
@@ -2,18 +2,21 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <title>Página do Pokémon</title>
-    <link rel="stylesheet" href="../style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Página do Pokémon Squirtle</title>
+
+    <link rel="stylesheet" href="../../style.css" />
   </head>
   <body>
     <header id="header">
-      <a href="../index.html"><h1>Squirtle</h1></a>
+      <a href="../../index.html">
+        <h1>Squirtle</h1>
+      </a>
     </header>
 
     <main>
-      <section>
-        <h1 id="informacoes"></h1>
-        <img id="pokemon-img"></div>
+      <section id="info-pokemon" aria-labelledby="info-pokemon-label">
+        <img />
       </section>
     </main>
 
@@ -24,10 +27,8 @@
       <p><a href="#header">Voltar para o topo</a></p>
       <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
       <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
-      <p id="times-visited"></p>
     </footer>
-    <script src="../script.js"></script>
+    <script src="./index.js"></script>
+    <script src="../../footer-counter.js"></script>
   </body>
-
-  <script src="./script.js"></script>
 </html>
