--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Página do Pokémon Squirtle</title>
-    <link rel="stylesheet" href="style.css" />
+
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header id="header">
-      <h1>Squirtle</h1>
+      <a href="./index.html">
+        <h1>Squirtle</h1>
+      </a>
     </header>
 
     <nav aria-label="Navegação principal">
@@ -18,24 +22,21 @@
         <li><a href="#artigo-squirtle">Artigo sobre Squirtle</a></li>
         <li><a href="#recursos">Recursos Adicionais</a></li>
         <li><a href="#evolucao">Evolução</a></li>
-        <li><a href="./todo-list/index.html">Todo List</a></li>
+        <li><a href="./pages/todo/index.html">Todo List</a></li>
       </ul>
     </nav>
 
     <main>
       <section id="info-squirtle" aria-labelledby="info-squirtle-label">
         <h2 id="info-squirtle-label">Informações sobre Squirtle</h2>
-        <div id="squirtle-img">
+        <div>
           <img
-            class="hover-img"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
-            alt="Squirtle - Pokémon do tipo Água"
+            alt="Squirtle 1"
           />
           <img
-            class="hover-img"
-            id="squirtle-img-2"
             src="https://archives.bulbagarden.net/media/upload/thumb/7/79/Squirtle_SSBU.png/200px-Squirtle_SSBU.png"
-            alt="Squirtle - Pokemon do tipo água 2"
+            alt="Squirtle 2"
           />
         </div>
         <p>
@@ -116,42 +117,39 @@
         <h2 id="evolucao-label">Evoluções</h2>
         <ul>
           <li>
-            <figure>
-              <a href="./pokemon/pokemon.html?evolution=squirtle">
+            <a href="./pages/pokemon/index.html?name=squirtle">
+              <figure>
                 <img
                   src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
                   alt="Squirtle"
-                  class="hover-img"
                 />
-              </a>
-              <figcaption>1. Squirtle</figcaption>
-            </figure>
+                <figcaption>1. Squirtle</figcaption>
+              </figure>
+            </a>
           </li>
 
           <li>
-            <figure>
-              <a href="./pokemon/pokemon.html?evolution=wartortle">
+            <a href="./pages/pokemon/index.html?name=wartortle">
+              <figure>
                 <img
                   src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
                   alt="Wartortle"
-                  class="hover-img"
                 />
-              </a>
-              <figcaption>2. Wartortle</figcaption>
-            </figure>
+                <figcaption>2. Wartortle</figcaption>
+              </figure>
+            </a>
           </li>
 
           <li>
-            <figure>
-              <a href="./pokemon/pokemon.html?evolution=blastoise">
+            <a href="./pages/pokemon/index.html?name=blastoise">
+              <figure>
                 <img
                   src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
                   alt="Blastoise"
-                  class="hover-img"
                 />
-              </a>
-              <figcaption>3. Blastoise</figcaption>
-            </figure>
+                <figcaption>3. Blastoise</figcaption>
+              </figure>
+            </a>
           </li>
         </ul>
       </section>
@@ -164,8 +162,8 @@
       <p><a href="#header">Voltar para o topo</a></p>
       <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
       <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
-      <p id="times-visited"></p>
     </footer>
-    <script src="script.js"></script>
+
+    <script src="./footer-counter.js"></script>
   </body>
 </html>
