--- a/index.html
+++ b/index.html
@@ -164,6 +164,6 @@
       <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
     </footer>
 
-    <script src="./footer-counter.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
