--- a/pokemon/pokemon.html
+++ b/pokemon/pokemon.html
@@ -2,33 +2,36 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Página do Pokémon Squirtle</title>
-
-    <link rel="stylesheet" href="../../style.css" />
+    <title>Página do Pokémon</title>
+    <link rel="stylesheet" href="../styles/style.css" />
   </head>
   <body>
-    <header id="header">
-      <a href="../../index.html">
-        <h1>Squirtle</h1>
-      </a>
+    <header id="topo">
+      <a href="../index.html"><h1>Squirtle</h1></a>
     </header>
 
     <main>
-      <section id="info-pokemon" aria-labelledby="info-pokemon-label">
-        <img />
+      <section id="informacoes-section">
+        <h2 id="detalhes-pokemon"></h2>
+        <img id="imagem-pokemon" alt="Imagem do Squirtle">
       </section>
     </main>
 
-    <footer aria-label="Rodapé">
-      <p aria-label="Copyright">
+    <footer aria-label="Seção de Rodapé">
+      <p aria-label="Direitos Autorais">
         &copy; 2024 Página do Pokémon Squirtle. Todos os direitos reservados.
       </p>
-      <p><a href="#header">Voltar para o topo</a></p>
-      <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
-      <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
+      <nav>
+        <ul>
+          <li><a href="#topo">Voltar ao topo</a></li>
+          <li><a href="mailto:contato@squirtlepage.com">Entre em contato via e-mail</a></li>
+          <li><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></li>
+        </ul>
+      </nav>
+      <p id="visitas"></p>
     </footer>
-    <script src="./index.js"></script>
-    <script src="../../footer-counter.js"></script>
+    <script src="../script.js"></script>
   </body>
+
+    <script src="./script/.js"></script>
 </html>
