--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Página do Pokémon Squirtle</title>
-
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header id="header">
-      <a href="./index.html">
-        <h1>Squirtle</h1>
-      </a>
+      <h1>Squirtle</h1>
     </header>
 
     <nav aria-label="Navegação principal">
@@ -22,21 +18,24 @@
         <li><a href="#artigo-squirtle">Artigo sobre Squirtle</a></li>
         <li><a href="#recursos">Recursos Adicionais</a></li>
         <li><a href="#evolucao">Evolução</a></li>
-        <li><a href="./pages/todo/index.html">Todo List</a></li>
+        <li><a href="./todo-list/index.html">Todo List</a></li>
       </ul>
     </nav>
 
     <main>
       <section id="info-squirtle" aria-labelledby="info-squirtle-label">
         <h2 id="info-squirtle-label">Informações sobre Squirtle</h2>
-        <div>
+        <div id="squirtle-img">
           <img
+            class="hover-img"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
-            alt="Squirtle 1"
+            alt="Squirtle - Pokémon do tipo Água"
           />
           <img
+            class="hover-img"
+            id="squirtle-img-2"
             src="https://archives.bulbagarden.net/media/upload/thumb/7/79/Squirtle_SSBU.png/200px-Squirtle_SSBU.png"
-            alt="Squirtle 2"
+            alt="Squirtle - Pokemon do tipo água 2"
           />
         </div>
         <p>
@@ -117,39 +116,42 @@
         <h2 id="evolucao-label">Evoluções</h2>
         <ul>
           <li>
-            <a href="./pages/pokemon/index.html?name=squirtle">
-              <figure>
+            <figure>
+              <a href="./pokemon/pokemon.html?evolution=squirtle">
                 <img
                   src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
                   alt="Squirtle"
+                  class="hover-img"
                 />
-                <figcaption>1. Squirtle</figcaption>
-              </figure>
-            </a>
+              </a>
+              <figcaption>1. Squirtle</figcaption>
+            </figure>
           </li>
 
           <li>
-            <a href="./pages/pokemon/index.html?name=wartortle">
-              <figure>
+            <figure>
+              <a href="./pokemon/pokemon.html?evolution=wartortle">
                 <img
                   src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
                   alt="Wartortle"
+                  class="hover-img"
                 />
-                <figcaption>2. Wartortle</figcaption>
-              </figure>
-            </a>
+              </a>
+              <figcaption>2. Wartortle</figcaption>
+            </figure>
           </li>
 
           <li>
-            <a href="./pages/pokemon/index.html?name=blastoise">
-              <figure>
+            <figure>
+              <a href="./pokemon/pokemon.html?evolution=blastoise">
                 <img
                   src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
                   alt="Blastoise"
+                  class="hover-img"
                 />
-                <figcaption>3. Blastoise</figcaption>
-              </figure>
-            </a>
+              </a>
+              <figcaption>3. Blastoise</figcaption>
+            </figure>
           </li>
         </ul>
       </section>
@@ -162,8 +164,8 @@
       <p><a href="#header">Voltar para o topo</a></p>
       <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
       <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
+      <p id="times-visited"></p>
     </footer>
-
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
