--- a/pokemon/pokemon.html
+++ b/pokemon/pokemon.html
@@ -3,35 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <title>Página do Pokémon</title>
-    <link rel="stylesheet" href="../styles/style.css" />
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <header id="topo">
+    <header id="header">
       <a href="../index.html"><h1>Squirtle</h1></a>
     </header>
 
     <main>
-      <section id="informacoes-section">
-        <h2 id="detalhes-pokemon"></h2>
-        <img id="imagem-pokemon" alt="Imagem do Squirtle">
+      <section>
+        <h1 id="informacoes"></h1>
+        <img id="pokemon-img"></div>
       </section>
     </main>
 
-    <footer aria-label="Seção de Rodapé">
-      <p aria-label="Direitos Autorais">
+    <footer aria-label="Rodapé">
+      <p aria-label="Copyright">
         &copy; 2024 Página do Pokémon Squirtle. Todos os direitos reservados.
       </p>
-      <nav>
-        <ul>
-          <li><a href="#topo">Voltar ao topo</a></li>
-          <li><a href="mailto:contato@squirtlepage.com">Entre em contato via e-mail</a></li>
-          <li><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></li>
-        </ul>
-      </nav>
-      <p id="visitas"></p>
+      <p><a href="#header">Voltar para o topo</a></p>
+      <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
+      <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
+      <p id="times-visited"></p>
     </footer>
     <script src="../script.js"></script>
   </body>
 
-    <script src="./script/.js"></script>
+  <script src="./script.js"></script>
 </html>
