--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div class="container">
@@ -13,24 +13,27 @@
       </header>
       <main>
         <dialog>
-          <form id="update-task-form">
+          <form id="editTaskForm" onsubmit="editTask(event)">
             <input
               type="text"
               name="title"
-              id="update-title"
+              id="editTitle"
+              required
               placeholder="Informe o título da tarefa"
             />
             <textarea
-              id="update-description"
+              id="editDescription"
               name="description"
+              required
               placeholder="Informe a descrição da tarefa"
             ></textarea>
             <div>
-              <button type="submit" id="update-task">Editar Tarefa</button>
-              <button id="cancel-update">Cancelar</button>
+              <button type="submit">Editar Tarefa</button>
+              <button type="button" onclick="closeDialog()">Cancelar</button>
             </div>
           </form>
         </dialog>
+
         <!-- Formulário para adicionar tarefas -->
         <form id="taskForm" onsubmit="addTask(event)">
           <input
@@ -46,7 +49,7 @@
             required
             placeholder="Informe a descrição da tarefa"
           ></textarea>
-          <button type="submit" id="save-task">Salvar Tarefa</button>
+          <button type="submit">Salvar Tarefa</button>
         </form>
 
         <!-- Lista de tarefas -->
@@ -56,6 +59,6 @@
     </div>
 
     <script src="./index.js"></script>
-    <script src="../script.js"></script>
+    <script src="../../footer-counter.js"></script>
   </body>
 </html>
