--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -17,12 +17,12 @@
             <input
               type="text"
               name="title"
-              id="editTitle"
+              id="title"
               required
               placeholder="Informe o título da tarefa"
             />
             <textarea
-              id="editDescription"
+              id="description"
               name="description"
               required
               placeholder="Informe a descrição da tarefa"
